# Codex-Switcher

./: .gitignore  PHASE2_ACCEPTANCE.md  README.md  README_CN.md  README_EN.md  package-lock.json  package.json
.github/workflows/: nightly-release.yml
react-vite/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
react-vite/src/: App.tsx  styles.css
react-vite/src-tauri/: Cargo.toml  tauri.conf.json
react-vite/src-tauri/capabilities/: default.json
react-vite/src-tauri/src/: codex_config.rs  commands.rs  core.rs  lib.rs  mobile_residency.rs  models.rs  providers.rs  proxy.rs  routing.rs  secrets.rs  transforms.rs  tray.rs
react-vite/src/components/: AccountPool.tsx  AddAccountDialog.tsx  AppSidebar.tsx  DataTooltip.tsx  DeleteAccountDialog.tsx  MainArea.tsx  ProxyRoutingPage.tsx  RefreshAllProgress.tsx  RenameAccountDialog.tsx  SetSubscriptionDialog.tsx  SettingsDrawer.tsx  SmartQuotaInviteDialog.tsx  SmartQuotaSchedulerPanel.tsx  SubscriptionBadge.tsx  TitleBar.tsx  ToastContainer.tsx  TokenUsageCard.tsx  TopBar.tsx  TrayMenu.tsx  UsageAnalyticsPage.tsx  UsageHeatmap.tsx  UsageWindowCard.tsx
react-vite/src/lib/: api.ts  types.ts  usageDb.ts  utils.ts
react-vite/src/store/: appStore.ts
