[package]
name = "codex-switcher"
version = "0.1.0"
description = "Codex Account Switcher — manage multiple Codex accounts"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
dirs = "6"
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["fs", "io-util", "net", "sync", "macros", "rt-multi-thread"] }
anyhow = "1"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
axum = { version = "0.7", features = ["ws"] }
bytes = "1"
futures-util = "0.3"
http = "1"
http-body-util = "0.1"
once_cell = "1"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
toml_edit = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
